# Meayer-AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  test_all.sh
ai-service/: .env.example  Dockerfile  pyproject.toml  railway.toml  test_all_endpoints.sh  test_scraper.py  use_case_streamed.sh
ai-service/app/: config.py  dependencies.py  main.py
ai-service/app/agents/: authenticity_agent.py  base.py  classifier_agent.py  consistency_agent.py  extraction_agent.py  ocr_agent.py  orchestrator.py  report_agent.py  scoring_agent.py  scraping_agent.py
ai-service/app/data/: templates.json
ai-service/app/routers/: classify.py  extract.py  pipeline.py  score.py  templates.py
ai-service/app/schemas/: schemas.py
ai-service/app/services/: cnas_scraper.py  layer_registry.py  result_parser.py  template_service.py
ai-service/app/tools/: authenticity_tools.py  classifier_tools.py  extraction_tools.py  gemini_tool.py  gpt4o_vision_tool.py  image_preprocessor.py  name_matcher.py  ocr_tools.py  paddleocr_tool.py  tesseract_tool.py
ai-service/app/utils/: rate_limiter.py
ai-service/tests/: test_api.py
ai-service/tests/test_agents/: test_agent_personality.py  test_base.py  test_orchestrator.py  test_scoring.py
ai-service/tests/test_tools/: test_name_matcher.py
app/: config.py  dependencies.py  main.py
app/agents/: consistency_agent.py  extraction_agent.py  report_agent.py  scoring_agent.py
app/data/: templates.json
app/routers/: authenticity.py  classify.py  cnas.py  consistency.py  extract.py  stubs.py  templates.py
app/schemas/: cnas.py  schemas.py
app/services/: browser_pool.py  captcha_solver.py  cnas_scraper.py  result_parser.py  template_service.py
app/tools/: authenticity_tools.py  classifier_tools.py  gemini_tool.py  image_preprocessor.py  tesseract_tool.py
app/utils/: rate_limiter.py  retry.py
docs/: agentic_design.md  architecture.md  clean_code.md  components_and_interactions.md  deployment.md  setup.md  system_architecture_diagram.md  visual_representation.md
scraping-service/: .env.example  pyproject.toml
scraping-service/app/: config.py  main.py
scraping-service/app/routers/: cnas.py
scraping-service/app/schemas/: cnas.py
scraping-service/app/services/: captcha_solver.py  cnas_scraper.py  result_parser.py  storage_service.py
scraping-service/tests/: test_api.py  test_parser.py
tests/: test_api.py
tests/test_agents/: test_base.py
