[tool.uv.workspace]
members = ["ai-service", "scraping-service"]

[project]
name = "algeria-verification-monorepo"
version = "0.1.0"
description = "Monorepo for Algerian document verification and scraping services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.8",
]

[tool.pytest.ini_options]
pythonpath = ["ai-service", "scraping-service"]
asyncio_mode = "auto"
testpaths = ["ai-service/tests", "scraping-service/tests"]
