[project]
name = "scraping-service"
version = "0.1.0"
description = "FastAPI service for automated government website verification (CNAS)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "pytesseract>=0.3.10",
    "google-genai>=1.0.0",
    "pydantic-settings>=2.3.0",
    "python-json-logger>=2.0.7",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
